# tmapi

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/types/: count_emails.rs  delete_attachment.rs  delete_emails.rs  delete_inbox.rs  download_attachment.rs  errors.rs  get_domains.rs  get_email_attachments.rs  get_emails.rs  get_inbox.rs  get_inbox_attachments.rs  health.rs  mod.rs
