[package]
name = "tmapi"
version = "0.1.0"
edition = "2024"

[dependencies]
email_address = "0.2.9"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "tokio-macros",
] }
