[package]
name = "tmapi"
version = "0.1.4-1"
edition = "2024"
license-file = "LICENSE"
description = "Simple TempMailAPI library for barid.site"
homepage = "https://github.com/doomed-neko/tmapi"
repository = "https://github.com/doomed-neko/tmapi"
readme = "README.md"
keywords = ["barid", "tempmail"]
categories = ["api-bindings", "email"]

[dependencies]
email_address = "0.2.9"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "tokio-macros",
] }
